gradient on current day implemented.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
     >
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 988.5 245">
         <defs>
+          <linearGradient
+            id="linear-gradient-bottom"
+            x1="500"
+            y1="122"
+            x2="500"
+            y2="245"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop offset="0" stop-color="#5BA0E8" />
+            <stop offset="1" stop-color="#fff" />
+          </linearGradient>
+          <linearGradient
+            id="linear-gradient-top"
+            x1="500"
+            x2="500"
+            y2="122"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop offset="0" stop-color="#fff" />
+            <stop offset="1" stop-color="#5BA0E8" />
+          </linearGradient>
           <radialGradient
             fx="60%"
             fy="60%"
